Customizable fixed rows v2
- Created the menu for .fixed rows
- Removed outline from menu
- Added custom scrollbar

--- a/src/css/frame.css
+++ b/src/css/frame.css
@@ -1,3 +1,14 @@
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+    background-color: #191a21;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #6272a4;
+}
+
 #frame {
     background-color:  #191a21;
     color:            #6272a4;
